package com.example.KickOns

var playerList = mutableListOf<Player>()
data class Player(
    val name : String?
)