package com.example.domains

//TODO: `See if more vars need to be added
data class Card(
    val type: String,
    val prompt: String,
    val players: String,
)